Add initial structure

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,23 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+Dockerfile
+/.idea/
+/.gradle/
+
+HELP.md
+.gradle
+/build/
+!gradle/wrapper/gradle-wrapper.jar
+
+### IntelliJ IDEA ###
+*.iws
+*.iml
+*.ipr
+/out/
+
+### Project ###
+logs/
+gradle/.DS_Store
+.DS_Store
