Add notification value

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=1212
+
+notification.url=https://notifications.ironman.stage.mintpro.in/notifications?broker=yesbank
+
+dashboard.url=https://google.com
