Add seller functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=1212
 
-notification.url=https://notifications.ironman.stage.mintpro.in/notifications?broker=yesbank
+notification.url=notification_url
 
-dashboard.url=https://google.com
+dashboard.url=dashboard_url
